--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "framer-motion": "^12.15.0",
     "geist": "^1.4.2",
     "input-otp": "^1.4.2",
+    "jotai": "^2.12.5",
     "lucide-react": "^0.511.0",
     "motion": "^12.15.0",
     "next": "15.3.3",
