--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "react-markdown": "^10.1.0",
+    "react-player": "^2.16.0",
     "react-use-measure": "^2.1.7",
     "remark-gfm": "^4.0.1",
     "remeda": "^2.23.0",
